fix to upload files to app domain

--- a/configs/.env.test.local
+++ b/configs/.env.test.local
@@ -12,12 +12,13 @@ AWS_SECRET_ACCESS_KEY=SecretAccessKey
 AWS_DEFAULT_REGION=eu-west-2
 AWS_ACCOUNT_ID=000000000000
 API_GATEWAY_ID=TEST_API_GATEWAY_ID
+APP_DOMAIN=http://test.co.uk
 
 LOG_LEVEL=fatal # fatal | error | debug | info
 TZ='UTC'
 QUARANTINE_BUCKET=QUARANTINE_BUCKET
 DICOM_IMAGE_BUCKET=DICOM_IMAGE_BUCKET
-SSE_KEY_ID=SSE_KEY_ID
+VITE_SSE_KEY_ID=SSE_KEY_ID
 VITE_MSAL_CLIENT_ID=TEST_CLIENT_ID
 VITE_MSAL_TENANT_ID=TEST_TENANT_ID
 VITE_AUTH_ENDPOINT_URI=TEST_ENDPOINT
