--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -86,7 +86,7 @@ jobs:
       AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
       API_GATEWAY_ID: ${{ vars.API_GATEWAY_ID }}
       APP_DOMAIN: ${{ vars.APP_DOMAIN }}
-      SSE_KEY_ID: ${{ vars.SSE_KEY_ID }}
+      VITE_SSE_KEY_ID: ${{ vars.SSE_KEY_ID }}
 
     strategy:
       matrix:
@@ -142,7 +142,7 @@ jobs:
       APP_DOMAIN: ${{ vars.APP_DOMAIN }}
       AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
       API_GATEWAY_ID: ${{ vars.API_GATEWAY_ID }}
-      SSE_KEY_ID: ${{ vars.SSE_KEY_ID }}
+      VITE_SSE_KEY_ID: ${{ vars.SSE_KEY_ID }}
 
     steps:
       - name: Checkout code
@@ -187,7 +187,7 @@ jobs:
     env:
       AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
       APP_DOMAIN: ${{ vars.APP_DOMAIN }}
-      SSE_KEY_ID: ${{ vars.SSE_KEY_ID }}
+      VITE_SSE_KEY_ID: ${{ vars.SSE_KEY_ID }}
 
     steps:
       - name: Checkout code
