debugging steps for dashboard

--- a/.github/workflows/nightlyCypressTests.yaml
+++ b/.github/workflows/nightlyCypressTests.yaml
@@ -164,33 +164,105 @@ jobs:
         id: extract_counts
         run: |
           JSON_FILE=pets-ui/cypress/reports/mochawesome/mochawesome.json
+          JSON_DIR=pets-ui/cypress/reports/mochawesome/.jsons
           PASSED_COUNT=0
           FAILED_COUNT=0
           TOTAL_COUNT=0
           SKIPPED_COUNT=0
           
+          echo "🔍 Debug: Looking for mochawesome reports..."
+          echo "Expected merged file: $JSON_FILE"
+          echo "JSON directory: $JSON_DIR"
+          
+          # List all available report files for debugging
+          echo "📁 Available files in cypress/reports:"
+          find pets-ui/cypress/reports -type f -name "*.json" 2>/dev/null || echo "No JSON files found"
+          
+          # Check if merged file exists
           if [ -f "$JSON_FILE" ]; then
-            # Extract counts using jq if available, otherwise use grep/sed
+            echo "✅ Found merged mochawesome report"
+            echo "📄 Report preview (first 500 chars):"
+            head -c 500 "$JSON_FILE"
+            echo ""
+            
+            # Install jq if not available
+            if ! command -v jq >/dev/null 2>&1; then
+              echo "Installing jq..."
+              sudo apt-get update && sudo apt-get install -y jq
+            fi
+            
+            # Try multiple extraction methods for different mochawesome structures
             if command -v jq >/dev/null 2>&1; then
-              PASSED_COUNT=$(jq -r '.stats.passes // 0' "$JSON_FILE")
-              FAILED_COUNT=$(jq -r '.stats.failures // 0' "$JSON_FILE")
-              TOTAL_COUNT=$(jq -r '.stats.tests // 0' "$JSON_FILE")
-              SKIPPED_COUNT=$(jq -r '.stats.skipped // 0' "$JSON_FILE")
+              echo "🔧 Trying mochawesome format extraction..."
+              
+              # Method 1: Standard mochawesome format
+              PASSED_COUNT=$(jq -r '.stats.passes // 0' "$JSON_FILE" 2>/dev/null || echo "0")
+              FAILED_COUNT=$(jq -r '.stats.failures // 0' "$JSON_FILE" 2>/dev/null || echo "0")
+              TOTAL_COUNT=$(jq -r '.stats.tests // 0' "$JSON_FILE" 2>/dev/null || echo "0")
+              SKIPPED_COUNT=$(jq -r '.stats.skipped // 0' "$JSON_FILE" 2>/dev/null || echo "0")
+              
+              # Method 2: Alternative structure (some versions use different keys)
+              if [ "$TOTAL_COUNT" = "0" ]; then
+                echo "🔄 Trying alternative extraction method..."
+                PASSED_COUNT=$(jq -r '.stats.testsRegistered - .stats.failures - .stats.skipped // 0' "$JSON_FILE" 2>/dev/null || echo "0")
+                FAILED_COUNT=$(jq -r '.stats.failures // 0' "$JSON_FILE" 2>/dev/null || echo "0")
+                TOTAL_COUNT=$(jq -r '.stats.testsRegistered // .stats.suites // 0' "$JSON_FILE" 2>/dev/null || echo "0")
+                SKIPPED_COUNT=$(jq -r '.stats.skipped // .stats.pending // 0' "$JSON_FILE" 2>/dev/null || echo "0")
+              fi
+              
+              # Method 3: Count from test results array
+              if [ "$TOTAL_COUNT" = "0" ]; then
+                echo "🔄 Trying test results array counting..."
+                TOTAL_COUNT=$(jq '[.results[]? // empty | .suites[]? // empty | .tests[]? // empty] | length' "$JSON_FILE" 2>/dev/null || echo "0")
+                PASSED_COUNT=$(jq '[.results[]? // empty | .suites[]? // empty | .tests[]? // empty | select(.state == "passed")] | length' "$JSON_FILE" 2>/dev/null || echo "0")
+                FAILED_COUNT=$(jq '[.results[]? // empty | .suites[]? // empty | .tests[]? // empty | select(.state == "failed")] | length' "$JSON_FILE" 2>/dev/null || echo "0")
+                SKIPPED_COUNT=$(jq '[.results[]? // empty | .suites[]? // empty | .tests[]? // empty | select(.state == "skipped" or .state == "pending")] | length' "$JSON_FILE" 2>/dev/null || echo "0")
+              fi
+              
+              # Debug: Show the actual stats structure
+              echo "📊 Available stats in report:"
+              jq '.stats // "No stats found"' "$JSON_FILE" 2>/dev/null || echo "Could not parse stats"
+            fi
+          else
+            echo "❌ Merged mochawesome report not found"
+            
+            # Try to extract from individual JSON files
+            if ls ${JSON_DIR}/*.json 1> /dev/null 2>&1; then
+              echo "🔄 Trying to extract from individual JSON files..."
+              
+              for json_file in ${JSON_DIR}/*.json; do
+                echo "📄 Processing: $json_file"
+                if command -v jq >/dev/null 2>&1; then
+                  file_passed=$(jq -r '.stats.passes // 0' "$json_file" 2>/dev/null || echo "0")
+                  file_failed=$(jq -r '.stats.failures // 0' "$json_file" 2>/dev/null || echo "0")
+                  file_total=$(jq -r '.stats.tests // 0' "$json_file" 2>/dev/null || echo "0")
+                  file_skipped=$(jq -r '.stats.skipped // 0' "$json_file" 2>/dev/null || echo "0")
+                  
+                  PASSED_COUNT=$((PASSED_COUNT + file_passed))
+                  FAILED_COUNT=$((FAILED_COUNT + file_failed))
+                  TOTAL_COUNT=$((TOTAL_COUNT + file_total))
+                  SKIPPED_COUNT=$((SKIPPED_COUNT + file_skipped))
+                  
+                  echo "  Stats: Total=$file_total, Passed=$file_passed, Failed=$file_failed, Skipped=$file_skipped"
+                fi
+              done
             else
-              # Fallback method using grep/sed
-              PASSED_COUNT=$(grep -o '"passes":[0-9]*' "$JSON_FILE" | sed 's/"passes"://' || echo "0")
-              FAILED_COUNT=$(grep -o '"failures":[0-9]*' "$JSON_FILE" | sed 's/"failures"://' || echo "0")
-              TOTAL_COUNT=$(grep -o '"tests":[0-9]*' "$JSON_FILE" | sed 's/"tests"://' || echo "0")
-              SKIPPED_COUNT=$(grep -o '"skipped":[0-9]*' "$JSON_FILE" | sed 's/"skipped"://' || echo "0")
+              echo "❌ No individual JSON files found either"
             fi
           fi
+          
+          # Ensure counts are numeric
+          PASSED_COUNT=${PASSED_COUNT:-0}
+          FAILED_COUNT=${FAILED_COUNT:-0}
+          TOTAL_COUNT=${TOTAL_COUNT:-0}
+          SKIPPED_COUNT=${SKIPPED_COUNT:-0}
           
           echo "passed_count=$PASSED_COUNT" >> $GITHUB_OUTPUT
           echo "failed_count=$FAILED_COUNT" >> $GITHUB_OUTPUT
           echo "total_count=$TOTAL_COUNT" >> $GITHUB_OUTPUT
           echo "skipped_count=$SKIPPED_COUNT" >> $GITHUB_OUTPUT
           
-          echo "Test counts for ${{ matrix.environment }}-${{ matrix.browser }}:"
+          echo "📈 Final test counts for ${{ matrix.environment }}-${{ matrix.browser }}:"
           echo "Total: $TOTAL_COUNT, Passed: $PASSED_COUNT, Failed: $FAILED_COUNT, Skipped: $SKIPPED_COUNT"
 
       - name: Upload Mochawesome Report
