update report dashboard

--- a/.github/workflows/nightlyCypressTests.yaml
+++ b/.github/workflows/nightlyCypressTests.yaml
@@ -162,13 +162,17 @@ jobs:
       - name: Merge Mochawesome Reports
         if: always()
         run: |
-          JSON_DIR=pets-ui/cypress/reports/mochawesome/mochawesome.json
+          JSON_DIR="pets-ui/cypress/reports/mochawesome/.jsons"
           if ls ${JSON_DIR}/*.json 1> /dev/null 2>&1; then
             npx mochawesome-merge ${JSON_DIR}/*.json > pets-ui/cypress/reports/mochawesome/mochawesome.json
             echo "Mochawesome reports merged successfully"
           else
             echo "No mochawesome JSON files found. Skipping merge."
           fi
+      - name: Show merged stats
+        run: |
+         jq '.stats' pets-ui/cypress/reports/mochawesome/mochawesome.json
+   
       - name: Install jq
         run: sudo apt-get update && sudo apt-get install -y jq
     
