--- a/.github/workflows/nightlyCypressTests.yaml
+++ b/.github/workflows/nightlyCypressTests.yaml
@@ -162,9 +162,9 @@ jobs:
       - name: Merge Mochawesome Reports
         if: always()
         run: |
-          JSON_DIR="pets-ui/cypress/reports/mochawesome/jsons"
+          JSON_DIR="pets-ui/cypress/reports/mochawesome/jsons/.jsons"
           if ls ${JSON_DIR}/*.json 1> /dev/null 2>&1; then
-            npx mochawesome-merge ${JSON_DIR}/*.json > pets-ui/cypress/reports/mochawesome/mochawesome.json
+            npx mochawesome-merge ${JSON_DIR}/*.json > pets-ui/cypress/reports/mochawesome/jsons/mochawesome.json
             echo "Mochawesome reports merged successfully"
           else
             echo "No mochawesome JSON files found. Skipping merge."
