--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -235,6 +235,9 @@ jobs:
     name: Run cypress tests
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment }}
+    env:
+      VITE_MSAL_CLIENT_ID: ${{ secrets.VITE_MSAL_CLIENT_ID }}
+      VITE_MSAL_TENANT_ID: ${{ secrets.VITE_MSAL_TENANT_ID }}
     if: inputs.environment != 'prod'
 
     strategy:
