--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -122,7 +122,8 @@ jobs:
 
       - name: Start Local Environment
         run: |
-          pnpm start & sleep 120
+          pnpm start
+          sleep 120
 
       - name: Cypress run tests
         uses: cypress-io/github-action@v6
