Private Beta Rel 1.1 (#545)
* TBBETA-1188: new release strategy updates (#516)

* Update pre-push hook to allow hotfix & release branches

* Update pr template

* Fix circular import sonarqube issue

* Fix circular import sonarqube issue

* Fix typo

* Fix triggers for ci & deploy-test workflows

* Add accessibility back into pr checklist

* TBBETA-1188: Fix QAT deployment trigger (#517)

* Update pre-push hook to allow hotfix & release branches

* Update pr template

* Fix circular import sonarqube issue

* Fix circular import sonarqube issue

* Fix typo

* Fix triggers for ci & deploy-test workflows

* Add accessibility back into pr checklist

* Fix deploy-test workflow trigger

* Fix file names to be consistent with qa app (#518)

* TBBETA-1137 Certificate print page (#491)

* Certificate print page

* Remove  footer link meant for TBBETA-155

* Update the pnpm-lock file

* Updating the Certificate

* Remove cat placeholders no longer needed

* Implementing requested changes and fixing testing

* Update pnpm-lock

* Fix this test as I added the clinic used that my account was assigned to

* fix ci issues

* update pnpm lock file

* Add new clinic for testing

* TBBETA-1112: fix the aws sdk to v3 (#515)

* Remove download button

* Fix test

* Fix SonarQube issues

* Attempt at fixing pnpm-lock

* Fix print button behaviour

* Restore pdf preview styles

* Fix missing comma

* Change coverage on SonarQube

* fix for review comments

---------

Co-authored-by: jasnave-ukhsa <jasnave.pinto@ukhsa.gov.uk>

* Release/1.0.0  (#531)

* TBBETA- 1282: trim date timestamps (#526)

* Trim timestamps when receiving dates from backend

* Dummy commit to trigger CI

* Revert "Dummy commit to trigger CI"

This reverts commit c994e5ad817859f8a24e2f68cdd543fc2023113c.

* Update CI triggers to include release branches

* Add additional test to check that timestamps are handled correctly

* Update swagger-ui-react to v5.28.0

* fix the idclaims bug (#528)

---------

Co-authored-by:

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -86,7 +86,7 @@ jobs:
       AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
       API_GATEWAY_ID: ${{ vars.API_GATEWAY_ID }}
       APP_DOMAIN: ${{ vars.APP_DOMAIN }}
-      SSE_KEY_ID: ${{ vars.SSE_KEY_ID }}
+      VITE_SSE_KEY_ID: ${{ vars.SSE_KEY_ID }}
 
     strategy:
       matrix:
@@ -142,7 +142,7 @@ jobs:
       APP_DOMAIN: ${{ vars.APP_DOMAIN }}
       AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
       API_GATEWAY_ID: ${{ vars.API_GATEWAY_ID }}
-      SSE_KEY_ID: ${{ vars.SSE_KEY_ID }}
+      VITE_SSE_KEY_ID: ${{ vars.SSE_KEY_ID }}
 
     steps:
       - name: Checkout code
@@ -187,7 +187,7 @@ jobs:
     env:
       AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
       APP_DOMAIN: ${{ vars.APP_DOMAIN }}
-      SSE_KEY_ID: ${{ vars.SSE_KEY_ID }}
+      VITE_SSE_KEY_ID: ${{ vars.SSE_KEY_ID }}
 
     steps:
       - name: Checkout code
@@ -233,7 +233,7 @@ jobs:
 
     strategy:
       matrix:
-        browser: [chrome, firefox, edge]
+        browser: [chrome, edge]
     env:
       APP_DOMAIN: ${{ vars.APP_DOMAIN }}
 
