TBBETA-784 modify run comand in CI.yaml
This is for cypress-run step

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -121,9 +121,7 @@ jobs:
         working-directory: pets-ui
 
       - name: Start Local Environment
-        run: |
-          pnpm start
-          sleep 120
+        run: pnpm start && sleep 120
 
       - name: Cypress run tests
         uses: cypress-io/github-action@v6
