--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -188,6 +188,7 @@ jobs:
       AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
       APP_DOMAIN: ${{ vars.APP_DOMAIN }}
       VITE_SSE_KEY_ID: ${{ vars.SSE_KEY_ID }}
+      VITE_GA_CONFIG_ID: ${{ vars.GA_CONFIG_ID }}
 
     steps:
       - name: Checkout code
