--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -121,8 +121,8 @@ jobs:
         working-directory: pets-ui
 
       - name: Start Local Environment
-        run: pnpm start && sleep 120
-
+      - run: |
+          pnpm start & sleep 120
       - name: Cypress run tests
         uses: cypress-io/github-action@v6
         continue-on-error: true
