--- a/configs/.env
+++ b/configs/.env
@@ -2,6 +2,7 @@ ENVIRONMENT=local
 VITE_ENVIRONMENT=local
 AWS_ENDPOINT_URL=http://127.0.0.1:4566
 AWS_ACCOUNT_ID=000000000000
+EDAP_AWS_ACCOUNT_ID=000000000000
 AWS_ACCESS_KEY_ID=foobar
 AWS_SECRET_ACCESS_KEY=foobar
 CLINIC_SERVICE_LAMBDA_NAME=clinic-service-lambda
