--- a/configs/.env.test.local
+++ b/configs/.env.test.local
@@ -11,6 +11,8 @@ AWS_ACCESS_KEY_ID=AccessKeyId
 AWS_SECRET_ACCESS_KEY=SecretAccessKey
 AWS_DEFAULT_REGION=eu-west-2
 AWS_ACCOUNT_ID=000000000000
+EDAP_AWS_ACCOUNT_ID=000000000000
+
 API_GATEWAY_ID=TEST_API_GATEWAY_ID
 APP_DOMAIN=http://test.co.uk
 
