--- a/configs/.env
+++ b/configs/.env
@@ -1,5 +1,6 @@
 ENVIRONMENT=local
 VITE_ENVIRONMENT=local
+AWS_REGION= eu-west-2
 AWS_ENDPOINT_URL=http://127.0.0.1:4566
 AWS_ACCOUNT_ID=000000000000
 EDAP_AWS_ACCOUNT_ID=000000000000
