--- a/configs/.env
+++ b/configs/.env
@@ -1,7 +1,9 @@
 ENVIRONMENT=local
 VITE_ENVIRONMENT=local
+AWS_REGION= eu-west-2
 AWS_ENDPOINT_URL=http://127.0.0.1:4566
 AWS_ACCOUNT_ID=000000000000
+EDAP_AWS_ACCOUNT_ID=000000000000
 AWS_ACCESS_KEY_ID=foobar
 AWS_SECRET_ACCESS_KEY=foobar
 CLINIC_SERVICE_LAMBDA_NAME=clinic-service-lambda
