Add synk config to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,6 @@ package-lock.json
 
 # Python env
 ve/
+
+# Snyk Security Extension - AI Rules (auto-generated)
+.github/instructions/snyk_rules.instructions.md
